--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,11 +33,11 @@ body::before {
 }
 
 a {
-  color: #12d640;
+  color: #cd161b;
 }
 
 a:hover {
-  color: #12d640;
+  color: #cd161b;
   text-decoration: none;
 }
 
@@ -80,11 +80,11 @@ h1, h2, h3, h4, h5, h6 {
 #header h2 {
   font-size: 24px;
   margin-top: 20px;
-  color: #12d640;
+  color: #cd161b;
 }
 
 #header h2 span {
-  color: #ffc107;
+  color: #ffffff;
   border-bottom: 2px solid #cd161b;
   padding-bottom: 6px;
 }
@@ -182,7 +182,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a {
-  color: #12d640;
+  color: #cd161b;
   text-decoration: none;
 }
 
@@ -727,7 +727,7 @@ section .container {
 }
 
 .services .icon-box:hover h4 a, .services .icon-box:hover p {
-  color: #12d640;
+  color: #cd161b;
 }
 
 /*--------------------------------------------------------------
@@ -936,7 +936,7 @@ section .container {
 }
 
 .contact .info-box .social-links a:hover {
-  color: #12d640;
+  color: #cd161b;
 }
 
 .contact .php-email-form {
