--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,11 +33,11 @@ body::before {
 }
 
 a {
-  color: #c1de01;
+  color: #c91b26;
 }
 
 a:hover {
-  color: #c1de01;
+  color: #c91b26;
   text-decoration: none;
 }
 
@@ -80,12 +80,12 @@ h1, h2, h3, h4, h5, h6 {
 #header h2 {
   font-size: 24px;
   margin-top: 20px;
-  color: #c1de01;
+  color: #c91b26;
 }
 
 #header h2 span {
   color: #ffffff;
-  border-bottom: 2px solid #c1de01;
+  border-bottom: 2px solid #c91b26;
   padding-bottom: 6px;
 }
 
@@ -114,7 +114,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header .social-links a:hover {
-  background: #c1de01;
+  background: #c91b26;
 }
 
 @media (max-width: 992px) {
@@ -182,7 +182,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a {
-  color: #c1de01;
+  color: #c91b26;
   text-decoration: none;
 }
 
@@ -239,7 +239,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .mobile-nav a:hover, .mobile-nav .active > a, .mobile-nav li:hover > a {
-  color: #c1de01;
+  color: #c91b26;
   text-decoration: none;
 }
 
@@ -377,7 +377,7 @@ section .container {
 .about-me .content h3 {
   font-weight: 700;
   font-size: 26px;
-  color: #c1de01;
+  color: #c91b26;
 }
 
 .about-me .content ul {
@@ -392,7 +392,7 @@ section .container {
 .about-me .content ul i {
   font-size: 20px;
   padding-right: 2px;
-  color: #c1de01;
+  color: #c91b26;
 }
 
 .about-me .content p:last-child {
@@ -422,7 +422,7 @@ section .container {
   font-size: 24px;
   background: rgba(255, 255, 255, 0.1);
   padding: 12px;
-  color: #c1de01;
+  color: #c91b26;
   border-radius: 50px;
 }
 
@@ -472,7 +472,7 @@ section .container {
   width: 1px;
   height: 10px;
   transition: .9s;
-  background-color: #c1de01;
+  background-color: #c91b26;
 }
 
 /*--------------------------------------------------------------
@@ -580,7 +580,7 @@ section .container {
 }
 
 .testimonials .owl-dot.active {
-  background-color: #c1de01 !important;
+  background-color: #c91b26 !important;
 }
 
 @media (max-width: 767px) {
@@ -613,7 +613,7 @@ section .container {
   font-weight: 600;
   text-transform: uppercase;
   font-family: "Poppins", sans-serif;
-  color: #c1de01;
+  color: #c91b26;
   margin-bottom: 10px;
 }
 
@@ -665,7 +665,7 @@ section .container {
   margin: 0 auto;
   width: 64px;
   height: 64px;
-  background: #c1de01;
+  background: #c91b26;
   border-radius: 5px;
   transition: all .3s ease-out 0s;
   display: flex;
@@ -711,7 +711,7 @@ section .container {
 
 .services .icon-box:hover {
   background: #042e5f;
-  border-color: #c1de01;
+  border-color: #c91b26;
 }
 
 .services .icon-box:hover .icon {
@@ -719,7 +719,7 @@ section .container {
 }
 
 .services .icon-box:hover .icon i {
-  color: #c1de01;
+  color: #c91b26;
 }
 
 .services .icon-box:hover .icon::before {
@@ -727,7 +727,7 @@ section .container {
 }
 
 .services .icon-box:hover h4 a, .services .icon-box:hover p {
-  color: #c1de01;
+  color: #c91b26;
 }
 
 /*--------------------------------------------------------------
@@ -762,7 +762,7 @@ section .container {
 }
 
 .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
-  background: #c1de01;
+  background: #c91b26;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -936,7 +936,7 @@ section .container {
 }
 
 .contact .info-box .social-links a:hover {
-  color: #c1de01;
+  color: #c91b26;
 }
 
 .contact .php-email-form {
@@ -964,7 +964,7 @@ section .container {
 .contact .php-email-form .sent-message {
   display: none;
   background: rgba(255, 255, 255, 0.08);
-  background: #c1de01;
+  background: #c91b26;
   text-align: center;
   padding: 15px;
   font-weight: 600;
@@ -984,7 +984,7 @@ section .container {
   width: 24px;
   height: 24px;
   margin: 0 10px -6px 0;
-  border: 3px solid #c1de01;
+  border: 3px solid #c91b26;
   border-top-color: #eee;
   -webkit-animation: animate-loading 1s linear infinite;
   animation: animate-loading 1s linear infinite;
@@ -1038,7 +1038,7 @@ section .container {
 }
 
 .contact .php-email-form button[type="submit"] {
-  background: #c1de01;
+  background: #c91b26;
   border: 0;
   padding: 10px 30px;
   color: #fff;
@@ -1081,7 +1081,7 @@ section .container {
 }
 
 .credits a {
-  color: #c1de01;
+  color: #c91b26;
   transition: 0.3s;
 }
 
